--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_notas">Notas</string>
     <string name="title_favoritas">Favoritas</string>
     <string name="title_user_profile">Mi perfil</string>
+    <string name="acction_add_nota">Nueva nota</string>
 </resources>
